--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
 
-    color: blue;
-
+    background-color: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -28,10 +28,20 @@ body{
 }
 
 #cabecera{
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
