--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,3 +35,10 @@ body{
     margin: 0;
     padding: 0.5em;
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
